<resources>
    <string name="app_name">SotukenSanbaVer2.0</string>
    <string name="backgroundImage">backgroundImage</string>
    <string name="button">Button</string>
    <string name="headerBackground">ヘッダーの背景画像</string>
    <string name="headerTitle">ヘッダーのタイトル</string>
    <string name="illustratedText">ずかん</string>
    <string name="animalText">どうぶつ</string>
    <string name="plantText">しょくぶつ</string>
    <string name="insectText">むし</string>
    <string name="othersText">そのた</string>
    <string name="nullText">なにもないよ！</string>
    <string name="footerBackground">フッターの背景画像</string>
    <string name="illustratedBackgound">図鑑ボタンの背景画像</string>
    <string name="optionBackgorund">設定ボタンの背景画像</string>
    <string name="title_activity_splash">うちな〜ずかん</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animalButton">動物ボタン</string>
    <string name="plantButton">植物ボタン</string>
    <string name="weartherButton">天気ボタン</string>
    <string name="buildingButton">建物ボタン</string>

    <string name="animalScroll">動物画面のスクロールビュー</string>
    <string name="logo">ロゴ</string>
    <string name="title_activity_title">TitleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_screen">タイトル画面</string>
    <string name="tap_btn">タップ</string>
    <string name="insectButton">虫ボタン</string>
    <string name="otherButton">その他ボタン</string>
    <string name="namedHint">なまえをきめてね</string>
    <string name="selectKinds">しゅるいをえらんでね</string>
    <string name="miniOtherBtn">小さいその他ボタン</string>
    <string name="miniInsectBtn">小さい虫ボタン</string>
    <string name="miniAnimalBtn">小さい動物ボタン</string>
    <string name="miniPlantBtn">小さい植物ボタン</string>
    <string name="nextBtn">次へボタン</string>
    <string name="detailTxt">とくちょうをかいてね</string>
    <string name="tap_text">タップしてスタート！</string>
    <string name="tapBtn">タップしてスタートボタン</string>
    <string name="returnBtn">戻るボタン</string>
    <string name="errerTxt">なかになにもないよ！</string>
    <string name="addPlzTxt">ついかしてね！</string>
    <string name="name">なまえぐわぁ</string>
    <string name="detail">とくちょうぐわぁ</string>
    <string name="deleteBtn">削除ボタン</string>
    <string name="countText">カウントテキスト</string>
    <string name="coutText">種類数表示</string>
    <string name="roleModelBtn">沖縄の生き物ボタン</string>
</resources>