<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IllustratedFragment">

    <ImageButton
        android:id="@+id/animalBtn"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/animalButton"
        android:scaleType="centerCrop"
        android:src="@drawable/animal"
        app:layout_constraintBottom_toTopOf="@+id/insectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plantBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/plantBtn"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/plantButton"
        android:scaleType="centerCrop"
        android:src="@drawable/plant"
        app:layout_constraintBottom_toTopOf="@+id/otherBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/animalBtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/insectBtn"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/insectButton"
        android:scaleType="centerCrop"
        android:src="@drawable/insect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/otherBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalBtn"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/otherBtn"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/otherButton"
        android:scaleType="centerCrop"
        android:src="@drawable/other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/insectBtn"
        app:layout_constraintTop_toBottomOf="@+id/plantBtn"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>