<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--背景画像-->

    <!--ヘッダーのコード-->
    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgroud"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:contentDescription="@string/headerBackground"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/headerTitle"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:srcCompat="@drawable/title"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/illustratedText"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <!--フッターのコード-->
    <ImageView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:contentDescription="@string/footerBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer" />

    <ImageView
        android:id="@+id/illustratedBtn"
        android:layout_width="110dp"
        android:layout_height="78dp"
        android:background="@drawable/illuastrated"
        android:contentDescription="@string/headerTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer" />

    <ImageView
        android:id="@+id/cameraBtn"
        android:layout_width="110dp"
        android:layout_height="78dp"
        android:background="@drawable/camera"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/optionBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/illustratedBtn"
        app:layout_constraintTop_toTopOf="@+id/footer"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/optionBtn"
        android:layout_width="110dp"
        android:layout_height="78dp"
        android:background="@drawable/option"
        android:contentDescription="@string/illustratedText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraBtn"
        app:layout_constraintTop_toTopOf="@+id/footer"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="626dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="626dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:navGraph="@navigation/nav" />

</androidx.constraintlayout.widget.ConstraintLayout>