<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ImageView -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="310dp"
            android:layout_height="310dp"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photoframe" />


        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/naming_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/detailText"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/naming_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/detail"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="106dp"
            android:layout_height="69dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/deleteBtn"
            android:scaleType="centerCrop"
            android:src="@drawable/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailText"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
